-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
-
a03c9f329e86cace6557fc68dac8b89a15993ee4
Qt framework installers are built in Mac with d-bus support. If using Qt on Mac without installed d-bus, it will cause crash, due to missing d-bus libs. Can be reproduced by installing Qt 4.8.0rc to Mac without d-bus and opening QT Designer.
Original bug was created to QtSDK and report can be found from here:
https://bugreports.qt.nokia.com/browse/QTSDK-1140
For Gerrit Dashboard: QTBUG-23128 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
15631,2 | Fixed crash issue in QtDBus if D-Bus not installed | 4.8 | qt/qt | Status: MERGED | +2 | 0 |