Fixed crash issue in QtDBus if D-Bus not installed

Task-number: QTBUG-23128